# AutoResume

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.sh
examples/: base_resume.md
src/autoresume/: __main__.py  versioning.py
src/autoresume/agent/: llm_client.py  prompts.py  resume_agent.py
src/autoresume/renderer/: ats_checker.py  engine.py  formatter.py
src/autoresume/renderer/templates/: resume.css  resume.html.jinja2
src/autoresume/tui/: app.py  app.tcss
src/autoresume/tui/screens/: main_screen.py
src/autoresume/tui/widgets/: agent_panel.py  job_panel.py  resume_panel.py
