[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoresume"
version = "0.1.0"
description = "AI-powered resume tailoring TUI with local LLM"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.61.0",
    "ollama>=0.3.0",
    "markdown>=3.6",
    "weasyprint>=62.0",
    "jinja2>=3.1.4",
]

[project.scripts]
autoresume = "autoresume.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresume"]

[dependency-groups]
dev = [
    "textual-dev>=1.5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
